--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "esbuild-ts-lib-starter",
+  "name": "@coder-ka/term",
   "version": "1.0.0",
   "description": "",
   "bin": "dist/bin.cjs",
@@ -25,15 +25,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/coder-ka/esbuild-ts-lib-starter.git"
+    "url": "git+https://github.com/coder-ka/term.git"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/coder-ka/esbuild-ts-lib-starter/issues"
+    "url": "https://github.com/coder-ka/term/issues"
   },
-  "homepage": "https://github.com/coder-ka/esbuild-ts-lib-starter#readme",
+  "homepage": "https://github.com/coder-ka/term#readme",
   "devDependencies": {
     "@types/assert": "^1.5.10",
     "@types/node": "^22.5.0",
